[project]
name = "cpast"
version = "0.0.4"
description = "Git commit in the past"
readme = "README.md"
requires-python = ">=3.7"
# license = { file = "LICENSE" }
keywords = [ "git", "commit", "command", "setuptools", "development" ]
authors = [
  { name = "skuzow", email = "alex@skuzow.net" }
]
maintainers = [ ]
classifiers = [
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only"
]
dependencies = [ ]

[project.optional-dependencies]
dev = [ ]
test = [ ]

[project.urls]
"Homepage" = "https://github.com/skuzow/cpast"
"Bug Reports" = "https://github.com/skuzow/cpast/issues"
"Source" = "https://github.com/skuzow/cpast"

[project.scripts]
cpast = "cpast:main"

[tool.setuptools]
# package-data = { "cpast" = ["*.dat"] }

[build-system]
requires = [ "setuptools>=43.0.0", "wheel" ]
build-backend = "setuptools.build_meta"
